Cache eklendi,Exceptionlar eklendi,Customer sayfası için natifications eklendi.